# SF2-Deep-Q-Learning

./: .gitignore  .pre-commit-config.yaml  Agent.py  DQN.py  ExperienceReplay.py  README.md  SFAutomation.slnx  SFEnv.py  SocketClient.py  hyperparameters.yaml  launch.sh  main.py  pyproject.toml
runs/: cartpolev1.pt  sf2[1].pt  sf2[2].pt
src/: SFAutomation.csproj  SFAutomation.sln  SFAutomationForm.cs  WebsocketServer.cs
src/Properties/: launchSettings.json
