[project]
name = "sfautomation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control]>=1.3.0",
    "pyyaml>=6.0.3",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
